LISTO, ultimos toques